--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>반응형코딩-레이아웃</title>
+  <title>Luminous Legacy</title>
   <link rel="stylesheet" href="css/LuminousLegacy.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -155,47 +155,47 @@ document.addEventListener('DOMContentLoaded', function() {
             </a>
               <div>
                 <h2>Pendant Light</h2>
-                <p>gorgeous golden lamp</p>
+                <p>Gorgeous Lamp</p>
               </div>
             </div><!-- titlebox2 end -->
 
           <div class="box2 smallbox2">
             <a href="">
-              <figure><img src="img/미드저니고급조명8.png" alt="" /></figure>
+              <figure><img src="img/미드저니눈꽃등.png" alt="" /></figure>
               </a>
               <div>
-                <h2>Pendant Light</h2>
-                <p>gorgeous golden lamp</p>
+                <h2>Ceiling Light</h2>
+                <p> Dandelion Ceiling Light</p>
               </div>            
           </div><!-- smallbox2 end -->
 
           <div class="box2 smallbox2">
             <a href="">
-              <figure><img src="img/미드저니고급조명6.png" alt="" /></figure>
+              <figure><img src="img/미드저니고급조명9.png" alt="" /></figure>
             </a>
               <div>
                 <h2>Pendant Light</h2>
-                <p>gorgeous golden lamp</p>
+                <p>Gorgeous Golden Lamp</p>
               </div>
           </div><!-- smallbox2 end -->
 
           <div class="box2 middlebox2">
             <a href="">
-              <figure><img src="img/미드저니고급조명7.png" alt="" /></figure>
+              <figure><img src="img/미드저니초샹들리에.png" alt="" /></figure>
             </a>
               <div>
-                <h2>Pendant Light</h2>
-                <p>gorgeous golden lamp</p>
+                <h2>Classic Chandelier</h2>
+                <p>Chandelier</p>
               </div>
           </div><!-- middlebox2 end -->
 
           <div class="box2 middlebox2">
             <a href="">
-              <figure><img src="img/미드저니고급조명5.png" alt="" /></figure>
+              <figure><img src="img/미드저니풀샹들리에.png" alt="" /></figure>
             </a>
               <div>
-                <h2>Pendant Light</h2>
-                <p>gorgeous golden lamp</p>
+                <h2>Plant Chandelier</h2>
+                <p>Chandelier</p>
               </div>
             </div><!-- middlebox2 end -->
         </div><!-- inner end -->
