--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@ document.addEventListener('DOMContentLoaded', function() {
               <figure><img src="img/미드저니고급조명.png" alt="" /></figure>
             </a>
               <div>
-                <h2>Pendant Light</h2>
-                <p>Gorgeous Lamp</p>
+                <h2>Gorgeous Lamp</h2>
+                <p>Pendant Light</p>
               </div>
             </div><!-- titlebox2 end -->
 
