--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@ document.addEventListener('DOMContentLoaded', function() {
           <p>Discover our best products</p>
           <div class="item">
             <div class="box bigbox">
-              <figure><img src="img/미드저니best1.png" alt="" /></figure>
+              <a href=""><figure><img src="img/미드저니best1.png" alt="" /></figure>
               <div class="title">
                 <h2>Floor lamp</h2>
                 <p>Explore our wide selection</p>
               </div>
-            
+            </a>
             </div>
             <!-- bigbox end -->
 
